@@ -100,8 +100,7 @@ be_visitor_executor_exh::visit_component (be_component *node)
 
   status = this->visit_component_scope (node);
 
-  os_ << be_nl
-      << "//@}" << be_nl_2;
+  os_<< "//@}" << be_nl_2;
 
   if (status == -1)
     {
